[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crml-engine"
version = "1.3.0"
description = "CRML reference engine (simulation/runtime)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Zeron Research Labs"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "crml-lang>=1.3.0",
  "numpy",
  "scipy",
  "pydantic",
  "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Faux16/crml"
Repository = "https://github.com/Faux16/crml"
Documentation = "https://faux16.github.io/crml/"

[project.scripts]
crml = "crml_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
