[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crml-lang"
version = "1.3.0"
description = "CRML language/spec models, schema validator, and YAML IO"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Zeron Research Labs"},
]
classifiers = [
  "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml",
  "jsonschema",
  "pydantic",
  "oscal-pydantic",
]

[project.urls]
Homepage = "https://github.com/Faux16/crml"
Repository = "https://github.com/Faux16/crml"
Documentation = "https://faux16.github.io/crml/"

[project.optional-dependencies]
dev = ["pytest"]
xlsx = ["openpyxl>=3.1"]

[project.scripts]
crml-xlsx = "crml_lang.mapping.__main__:main"
crml-lang = "crml_lang.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crml_lang = ["schemas/*.json", "oscal/*.yaml"]
